syntax = "proto3";
package scheduler;

// MutAssignRequestIdleWorker represents a state mutation in which a request
// is assigned to an already idle worker.
message MutAssignRequestIdleWorker {
	string worker_id= 1;
	string request_id = 2;
	int32 priority = 3;
}

// MutChangePriority represents a state mutation in which a running request
// has its priority changed.
message MutChangePriority {
	string worker_id = 1;
	int32 new_priority = 2;
}

// MutPreemptJob represents a state mutation in which a running request
// is interrupted, and replaced by a new request.
message MutPreemptJob {
	string worker_id = 1;
	string request_id = 2;
	int32 priority = 3;
}
